-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-panama
-
Component/s: hotspot
-
None
-
x86
The svml math vector stubs intrinsification is failing and they are not being called from jitted code.
The LibraryCallKit::inline_vector_nary_operation needs to be updated to call the svml math vector stubs where available.
The LibraryCallKit::inline_vector_nary_operation needs to be updated to call the svml math vector stubs where available.
- relates to
-
JDK-8262275 Math vector stubs are not called for double64 vectors
-
- Resolved
-
-
JDK-8262498 More than 50% performance degradation of pow operator due to call with svml intrinsic after JDK-8261267
-
- Resolved
-
-
JDK-8261484 Double64VectorTests.java crashes on x86
-
- Closed
-