8261267: Math vector stubs are not called from jitted code